deploy/overlay/llm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-svc
spec:
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
      name: hc
  selector:
    app: llm
